# PriScan-backend

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: celery_worker.py  main.py
